--- a/rate.html
+++ b/rate.html
@@ -1,5 +1,6 @@
 {
-  "seed": null,
+  "seed": 861601465,
   "date": "2024-Jun-7",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33"
 }
