--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 209531831,
-  "date": "2024-Jun-7",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "date": "2024-Jun-7",
+  "rate": "5.33",
+  "seed": 180521804
 }
