--- a/rate.html
+++ b/rate.html
@@ -2,5 +2,5 @@
   "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jun-7",
-  "seed": 302728807
+  "seed": "Get-Random"
 }
