--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 442595821,
   "date": "2024-Jun-7",
-  "seed": "Get-Random"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
