--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "seed": "Get-Random",
+  "seed": 775918869,
   "date": "2024-Jun-10",
   "source": "https://www.federalreserve.gov/releases/h15/"
 }
