--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "seed": 1353527393,
   "date": "2024-Jun-10",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 118474656
 }
