--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jun-10",
   "rate": "5.33",
+  "seed": 792930358,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 118474656
+  "date": "2024-Jun-12"
 }
