--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "seed": 1492506221,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jun-12",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 101986085
 }
