--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jun-12",
-  "seed": 101986085
+  "date": "2024-Jun-13",
+  "seed": 111682612,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
