--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 844454482,
-  "date": "2024-Jun-13"
+  "rate": "5.33",
+  "date": "2024-Jun-13",
+  "seed": 770505941
 }
