--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1094545986,
   "date": "2024-Jun-13",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 637369974
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
