--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jun-13",
   "rate": "5.33",
-  "seed": 1429064003
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 891104029,
+  "date": "2024-Jun-13"
 }
