--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
+  "date": "2024-Jun-13",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 891104029,
-  "date": "2024-Jun-13"
+  "seed": 289188670
 }
