--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jun-14",
+  "seed": 46334804,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1986340309,
-  "rate": "5.33"
+  "rate": "5.33",
+  "date": "2024-Jun-14"
 }
