--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 46334804,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Jun-14",
   "rate": "5.33",
-  "date": "2024-Jun-14"
+  "seed": 1351684336,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
