--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jun-14",
-  "rate": "5.33",
-  "seed": 1733733595
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1469658709,
+  "rate": "5.33"
 }
