--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Jun-14",
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 532216246,
-  "rate": "5.33"
+  "seed": 1763919739
 }
