--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jun-14",
   "rate": "5.33",
+  "seed": 1481090409,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1763919739
+  "date": "2024-Jun-14"
 }
