--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "seed": 1481090409,
+  "date": "2024-Jun-14",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jun-14"
+  "rate": "5.33",
+  "seed": 1623204705
 }
