--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jun-17",
+  "seed": 616343198,
   "rate": "5.33",
-  "seed": 1721340123
+  "date": "2024-Jun-17"
 }
