--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Jun-17",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 1818033789
+  "seed": 447885060,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
