--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jun-17",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "seed": 670053684
+  "date": "2024-Jun-17",
+  "seed": 1156019786,
+  "rate": "5.33"
 }
