--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 421016912,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1114805316,
   "rate": "5.33",
-  "date": "2024-Jun-17",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Jun-17"
 }
