--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1114805316,
-  "rate": "5.33",
-  "date": "2024-Jun-17"
+  "seed": 383558366,
+  "date": "2024-Jun-17",
+  "rate": "5.33"
 }
