--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 383558366,
+  "seed": 1903098779,
   "date": "2024-Jun-17",
-  "rate": "5.33"
+  "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
