--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1903098779,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 728924725,
   "date": "2024-Jun-17",
-  "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "5.33"
 }
