--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 715099539,
   "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jun-17",
-  "seed": 1469757564
+  "date": "2024-Jun-17"
 }
