--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 744842666,
-  "date": "2024-Jun-17"
+  "seed": 713149954,
+  "date": "2024-Jun-17",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
