--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1760054039,
-  "date": "2024-Jun-17",
-  "rate": "5.33"
+  "seed": 248288391,
+  "date": "2024-Jun-19*"
 }
