--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 248288391,
-  "date": "2024-Jun-19*"
+  "date": "2024-Jun-19*",
+  "rate": "5.33",
+  "seed": 369659321
 }
