--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jun-19*",
   "rate": "5.33",
-  "seed": 369659321
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1321089755,
+  "date": "2024-Jun-19*"
 }
