--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1581170008,
-  "rate": "5.33",
+  "date": "2024-Jun-19*",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jun-19*"
+  "seed": 1832066828,
+  "rate": "5.33"
 }
