--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
+  "seed": 1855779913,
   "date": "2024-Jun-19*",
-  "seed": 1279784539
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33"
 }
