--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1855779913,
+  "rate": "5.33",
   "date": "2024-Jun-19*",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "seed": 1238497083,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
