--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jun-19*",
-  "seed": 1238497083,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 947349491
 }
