--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1664307806,
   "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jun-19*",
-  "seed": 2112311887
+  "date": "2024-Jun-19*"
 }
