--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 867133533,
+  "date": "2024-Jun-20",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "date": "2024-Jun-20"
+  "seed": 1678096875,
+  "rate": "5.33"
 }
