--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Jun-20",
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1678096875,
-  "rate": "5.33"
+  "seed": 735238289
 }
