--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "5.33",
   "date": "2024-Jun-20",
-  "seed": 1296721465,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "seed": 72886623,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
