--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33",
   "date": "2024-Jun-20",
-  "seed": 132804363,
-  "rate": "5.33"
+  "seed": 1520891600
 }
