--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
+  "seed": 1080394863,
   "date": "2024-Jun-20",
-  "seed": 1520891600
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33"
 }
