--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jun-21",
   "rate": "5.33",
-  "seed": 512076541,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 888517498,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Jun-21"
 }
