--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jun-21",
+  "rate": "5.33",
+  "seed": 960359497,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1159271137,
-  "rate": "5.33"
+  "date": "2024-Jun-25"
 }
