--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Jun-25",
+  "seed": 983805785,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "seed": 1904576853,
-  "date": "2024-Jun-25"
+  "rate": "5.33"
 }
