--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jun-25",
-  "seed": 1856858024
+  "seed": 1047500846,
+  "rate": "5.33",
+  "date": "2024-Jun-25"
 }
