--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1047500846,
   "rate": "5.33",
-  "date": "2024-Jun-25"
+  "date": "2024-Jun-25",
+  "seed": 1409597394,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
