--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
+  "seed": 1232604909,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jun-25",
-  "seed": 1272471977,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "5.33"
 }
