--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1232604909,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33",
   "date": "2024-Jun-25",
-  "rate": "5.33"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1779316904
 }
