--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "date": "2024-Jun-25",
+  "seed": 1527911677,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1779316904
+  "rate": "5.33",
+  "date": "2024-Jun-25"
 }
