--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Jun-26",
   "rate": "5.33",
-  "seed": 2089930455,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jun-26"
+  "seed": 1978829357
 }
