--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jun-26",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1287658166,
-  "rate": "5.33"
+  "rate": "5.33",
+  "date": "2024-Jun-26",
+  "seed": 192413761
 }
