--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
+  "seed": 1889286815,
   "date": "2024-Jun-26",
-  "seed": 192413761
+  "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
