--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1889286815,
+  "seed": 669203998,
   "date": "2024-Jun-26",
-  "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33"
 }
