--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 669203998,
-  "date": "2024-Jun-26",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "rate": "5.33",
+  "seed": 1672012652,
+  "date": "2024-Jun-26"
 }
