--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1109852857,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jun-26",
-  "rate": "5.33",
-  "seed": 523894419
+  "rate": "5.33"
 }
