--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "date": "2024-Jun-26",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 728806031
+  "rate": "5.33",
+  "seed": 274621110,
+  "date": "2024-Jun-26"
 }
