--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 274621110,
-  "date": "2024-Jun-26"
+  "date": "2024-Jun-27",
+  "seed": 1747422071
 }
