--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jun-27",
-  "seed": 731170982
+  "seed": 679355548,
+  "rate": "5.33"
 }
