--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1880693743,
+  "date": "2024-Jun-27",
+  "seed": 1949439950,
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jun-27"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
