--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1186292957,
+  "seed": 430920014,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "date": "2024-Jun-27"
+  "date": "2024-Jun-27",
+  "rate": "5.33"
 }
