--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 274134932,
+  "date": "2024-Jun-27",
   "rate": "5.33",
-  "date": "2024-Jun-27"
+  "seed": 560955438,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
