--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jun-27",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 1362546398
+  "seed": 28824883,
+  "date": "2024-Jun-27",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
