--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1779976160,
-  "rate": "5.33",
+  "date": "2024-Jun-28",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jun-27"
+  "rate": "5.33",
+  "seed": 23838053
 }
