--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1831095304,
+  "seed": 435017583,
+  "date": "2024-Jun-28",
   "rate": "5.33",
-  "date": "2024-Jun-28"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
