--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 474199913,
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jun-28",
-  "seed": 505495513,
-  "rate": "5.33"
+  "date": "2024-Jun-28"
 }
