--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jun-28",
-  "seed": 802752680,
-  "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1776135932,
+  "rate": "5.33"
 }
