--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33",
+  "seed": 687931874,
   "date": "2024-Jun-28",
-  "seed": 1776135932,
-  "rate": "5.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
