--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 152259862,
   "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-1",
-  "seed": 1214549004
+  "date": "2024-Jul-1"
 }
