--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
+  "date": "2024-Jul-1",
+  "seed": 1581694845,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1401978137,
-  "date": "2024-Jul-1"
+  "rate": "5.33"
 }
