--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "date": "2024-Jul-1",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 847849981
+  "date": "2024-Jul-1",
+  "seed": 1830161539,
+  "rate": "5.33"
 }
