--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1719469905,
-  "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jul-2",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 892270526,
+  "rate": "5.33"
 }
