--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1052823088,
-  "date": "2024-Jul-2",
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Jul-2",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 536445393
 }
