--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "date": "2024-Jul-2",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 536445393
+  "date": "2024-Jul-2",
+  "seed": 1632659832,
+  "rate": "5.33"
 }
