--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33",
   "date": "2024-Jul-2",
-  "seed": 861833078,
-  "rate": "5.33"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1344143285
 }
