--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
+  "seed": 1268287774,
   "date": "2024-Jul-2",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1344143285
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
