--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "seed": 1268287774,
-  "date": "2024-Jul-2",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 280315329,
+  "date": "2024-Jul-2"
 }
