--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 273293801,
-  "date": "2024-Jul-2"
+  "rate": "5.33",
+  "date": "2024-Jul-2",
+  "seed": 2090884284
 }
