--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
+  "seed": 208229633,
   "date": "2024-Jul-2",
-  "seed": 2090884284
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33"
 }
