--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 208229633,
+  "rate": "5.33",
   "date": "2024-Jul-2",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "seed": 2030227618,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
