--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "5.33",
   "date": "2024-Jul-2",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 647212512,
-  "rate": "5.33"
+  "seed": 1551316479,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
