--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-2",
+  "seed": 500195808,
   "rate": "5.33",
-  "seed": 47589034
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Jul-2"
 }
