--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 500195808,
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-2"
+  "date": "2024-Jul-4*",
+  "rate": "5.33",
+  "seed": 542455621
 }
