--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jul-4*",
+  "seed": 646855372,
   "rate": "5.33",
-  "seed": 542455621
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
