--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
+  "seed": 1245854117,
   "date": "2024-Jul-4*",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1742907926
+  "rate": "5.33"
 }
