--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jul-4*",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "seed": 1100145375
+  "seed": 278585551,
+  "date": "2024-Jul-4*",
+  "rate": "5.33"
 }
