--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
   "date": "2024-Jul-4*",
-  "seed": 475736241
+  "seed": 256592280,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
