--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2005575756,
-  "date": "2024-Jul-4*",
   "rate": "5.33",
+  "seed": 768736286,
+  "date": "2024-Jul-5",
   "source": "https://www.federalreserve.gov/releases/h15/"
 }
