--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "date": "2024-Jul-5",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 737465526
+  "seed": 1279277969,
+  "date": "2024-Jul-5"
 }
