--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Jul-5",
   "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1279277969,
-  "date": "2024-Jul-5"
+  "seed": 861175752
 }
