--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 2108779931,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 1536153832,
-  "date": "2024-Jul-5",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Jul-5"
 }
