--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "seed": 142778820,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-5"
+  "date": "2024-Jul-5",
+  "seed": 1836147327,
+  "rate": "5.33"
 }
