--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-5",
-  "seed": 1836147327,
-  "rate": "5.33"
+  "rate": "5.33",
+  "seed": 1268771883,
+  "date": "2024-Jul-8"
 }
