--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 2109594297,
+  "date": "2024-Jul-8",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "seed": 1268771883,
-  "date": "2024-Jul-8"
+  "rate": "5.33"
 }
