--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Jul-8",
+  "seed": 837464974,
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1834363941
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
