--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 252562482,
+  "rate": "5.33",
   "date": "2024-Jul-8",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "seed": 771701065,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
