--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1029187009,
-  "date": "2024-Jul-8",
+  "seed": 2046094416,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Jul-8"
 }
