--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1237398578,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1353702571,
   "rate": "5.33",
-  "date": "2024-Jul-8",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Jul-8"
 }
