--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1353702571,
   "rate": "5.33",
-  "date": "2024-Jul-8"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Jul-9",
+  "seed": 1958408429
 }
