--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "5.33",
   "date": "2024-Jul-9",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 734853251,
-  "rate": "5.33"
+  "seed": 1387977,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
