--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Jul-9",
   "rate": "5.33",
-  "seed": 463254334,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-9"
+  "seed": 1513588924,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
