--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jul-9",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 579201112,
-  "rate": "5.33"
+  "rate": "5.33",
+  "seed": 1514506322,
+  "date": "2024-Jul-9"
 }
