--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 859377341,
+  "date": "2024-Jul-9",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1582577577,
-  "rate": "5.33",
-  "date": "2024-Jul-9"
+  "rate": "5.33"
 }
