--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 859377341,
-  "date": "2024-Jul-9",
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "seed": 120036306,
+  "date": "2024-Jul-10"
 }
