--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jul-10",
-  "rate": "5.33",
+  "seed": 748283972,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 721800555
+  "date": "2024-Jul-10",
+  "rate": "5.33"
 }
