--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1970425966,
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33",
   "date": "2024-Jul-10",
-  "rate": "5.33"
+  "seed": 972713490
 }
