--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
+  "seed": 1518364557,
   "date": "2024-Jul-10",
-  "seed": 972713490
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33"
 }
