--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jul-10",
   "rate": "5.33",
-  "seed": 1267633779
+  "seed": 343172640,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
