--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jul-10",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1785709577,
   "rate": "5.33",
-  "seed": 343172640,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Jul-10"
 }
