--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 346461157,
-  "date": "2024-Jul-10"
+  "date": "2024-Jul-10",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1672328410
 }
