--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "date": "2024-Jul-10",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1672328410
+  "seed": 1539001229,
+  "date": "2024-Jul-10"
 }
