--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jul-11",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1149582643,
-  "rate": "5.33"
+  "date": "2024-Jul-11",
+  "rate": "5.33",
+  "seed": 213055184
 }
