--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1094164169,
   "date": "2024-Jul-11",
   "rate": "5.33",
-  "seed": 213055184
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
