--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1094164169,
+  "seed": 1055243838,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jul-11",
-  "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "5.33"
 }
