--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
+  "seed": 1643518582,
   "date": "2024-Jul-11",
-  "seed": 460337311
+  "rate": "5.33"
 }
