--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1224469029,
   "date": "2024-Jul-11",
-  "rate": "5.33",
-  "seed": 1111095079,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "5.33"
 }
