--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1224469029,
+  "rate": "5.33",
   "date": "2024-Jul-11",
-  "rate": "5.33"
+  "seed": 2125838058,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
