--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jul-12",
-  "seed": 318843859,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1799631629,
+  "rate": "5.33"
 }
