--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33",
   "date": "2024-Jul-12",
-  "seed": 1306501105,
-  "rate": "5.33"
+  "seed": 1238921434,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
