--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1079866548,
   "rate": "5.33",
-  "date": "2024-Jul-12",
-  "seed": 1904603467,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Jul-12"
 }
