--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2030721263,
+  "date": "2024-Jul-12",
+  "seed": 1695192001,
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-12"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
