--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
   "date": "2024-Jul-12",
-  "seed": 935418904,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 844050549,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33"
 }
