--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 154542024,
-  "date": "2024-Jul-12"
+  "date": "2024-Jul-15",
+  "seed": 842430692,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
