--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2015251876,
-  "date": "2024-Jul-15"
+  "rate": "5.33",
+  "date": "2024-Jul-15",
+  "seed": 1964749841
 }
