--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jul-15",
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 426391460
+  "seed": 240376266,
+  "rate": "5.33",
+  "date": "2024-Jul-15"
 }
