--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1667824235,
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-15"
+  "rate": "5.33",
+  "date": "2024-Jul-15",
+  "seed": 118567268
 }
