--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "date": "2024-Jul-15",
-  "seed": 118567268
+  "seed": 1313500531,
+  "date": "2024-Jul-15"
 }
