--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Jul-15",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "seed": 1313500531,
-  "date": "2024-Jul-15"
+  "seed": 106236429,
+  "rate": "5.33"
 }
