--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jul-15",
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 106236429,
-  "rate": "5.33"
+  "seed": 897766803,
+  "date": "2024-Jul-15"
 }
