--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 897766803,
-  "date": "2024-Jul-15"
+  "date": "2024-Jul-15",
+  "seed": 1762610337,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
