--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 80946409,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "date": "2024-Jul-15",
-  "seed": 1762610337,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Jul-15"
 }
