--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1167118247,
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-16"
+  "date": "2024-Jul-16",
+  "seed": 1011208416,
+  "rate": "5.33"
 }
