--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "date": "2024-Jul-16",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 604216598
+  "seed": 2146026401,
+  "date": "2024-Jul-16"
 }
