--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
+  "seed": 1385040144,
+  "date": "2024-Jul-16",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2146026401,
-  "date": "2024-Jul-16"
+  "rate": "5.33"
 }
