--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 950006626,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jul-16",
-  "rate": "5.33"
+  "rate": "5.33",
+  "seed": 1986244792
 }
