--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Jul-16",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1199919687,
   "rate": "5.33",
-  "date": "2024-Jul-16"
+  "seed": 863805574
 }
