--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 535264815,
   "date": "2024-Jul-17",
-  "rate": "5.33"
+  "rate": "5.33",
+  "seed": 807251212
 }
