--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-17",
   "rate": "5.33",
-  "seed": 807251212
+  "seed": 2045429223,
+  "date": "2024-Jul-17"
 }
