--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 987831517,
   "date": "2024-Jul-17",
-  "rate": "5.33"
+  "seed": 1584870379
 }
