--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jul-17",
-  "seed": 2129502914
+  "seed": 1327746522,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
