--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 902482421,
-  "date": "2024-Jul-17",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "date": "2024-Jul-17",
+  "rate": "5.33",
+  "seed": 1388477235
 }
