--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-17",
+  "seed": 545218592,
   "rate": "5.33",
-  "seed": 1388477235
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Jul-17"
 }
