--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 545218592,
+  "seed": 878387054,
+  "date": "2024-Jul-17",
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-17"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
