--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Jul-18",
-  "rate": "5.33",
-  "seed": 516775977,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 261573130,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33"
 }
