--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jul-18",
-  "rate": "5.33",
-  "seed": 682846513
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1009905826,
+  "rate": "5.33"
 }
