--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jul-18",
+  "seed": 556179185,
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1009905826,
-  "rate": "5.33"
+  "date": "2024-Jul-18"
 }
