--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 556179185,
+  "seed": 1556311007,
+  "date": "2024-Jul-18",
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-18"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
