--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
   "date": "2024-Jul-18",
-  "seed": 1298051740
+  "seed": 1625555942,
+  "rate": "5.33"
 }
