--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1498075112,
   "rate": "5.33",
-  "date": "2024-Jul-18",
-  "seed": 7200246
+  "date": "2024-Jul-18"
 }
