--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-19",
-  "seed": 281890450,
-  "rate": "5.33"
+  "seed": 1670631709,
+  "rate": "5.33",
+  "date": "2024-Jul-19"
 }
