--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1574953387,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1670631709,
-  "rate": "5.33",
-  "date": "2024-Jul-19"
+  "date": "2024-Jul-19",
+  "rate": "5.33"
 }
