--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "date": "2024-Jul-19",
-  "seed": 799999681
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1861466349,
+  "date": "2024-Jul-19"
 }
