--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Jul-19",
   "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1861466349,
-  "date": "2024-Jul-19"
+  "seed": 492484518
 }
