--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jul-19",
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 492484518
+  "seed": 1146198768,
+  "rate": "5.33",
+  "date": "2024-Jul-19"
 }
