--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Jul-19",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1146198768,
   "rate": "5.33",
-  "date": "2024-Jul-19"
+  "seed": 1327679331
 }
