--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "date": "2024-Jul-19",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 303600361
+  "rate": "5.33",
+  "seed": 1655096886,
+  "date": "2024-Jul-19"
 }
