--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 510389124,
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-19"
+  "date": "2024-Jul-19",
+  "seed": 2102405630,
+  "rate": "5.33"
 }
