--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-19",
-  "seed": 2102405630,
-  "rate": "5.33"
+  "date": "2024-Jul-22",
+  "seed": 501217621,
+  "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
