--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1659093912,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "date": "2024-Jul-22"
+  "date": "2024-Jul-22",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1127884436
 }
