--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jul-22",
-  "seed": 1561302009
+  "seed": 1265676293,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
