--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 77424135,
+  "seed": 1664442579,
+  "rate": "5.33",
   "date": "2024-Jul-22",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
