--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1664442579,
+  "seed": 1654052415,
   "rate": "5.33",
-  "date": "2024-Jul-22",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Jul-23"
 }
