--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "seed": 1859801077,
   "date": "2024-Jul-23",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1676338188,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33"
 }
