--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1943449947,
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-23"
+  "seed": 1851146886,
+  "date": "2024-Jul-23",
+  "rate": "5.33"
 }
