--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
   "date": "2024-Jul-24",
-  "seed": 877504454,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33",
+  "seed": 568671896
 }
