--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Jul-24",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1321343435,
   "rate": "5.33",
-  "seed": 568671896
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
