--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jul-24",
-  "rate": "5.33",
+  "seed": 284154741,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 285453670
+  "rate": "5.33",
+  "date": "2024-Jul-24"
 }
