--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1751854737,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "date": "2024-Jul-25"
+  "seed": 230978802,
+  "date": "2024-Jul-25",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
