--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 73226623,
   "rate": "5.33",
-  "date": "2024-Jul-25",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 376518265
+  "date": "2024-Jul-25"
 }
