--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jul-25",
+  "date": "2024-Jul-26",
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1971102871
+  "seed": 1335231383,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
