--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "date": "2024-Jul-26",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1177465738
+  "rate": "5.33",
+  "seed": 765724459,
+  "date": "2024-Jul-26"
 }
