--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1302271136,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "date": "2024-Jul-26",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 833951826,
+  "date": "2024-Jul-26"
 }
