--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "date": "2024-Jul-29",
+  "seed": 864540040,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1903528067
+  "rate": "5.33",
+  "date": "2024-Jul-29"
 }
