--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 864540040,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2100426851,
+  "date": "2024-Jul-29",
   "rate": "5.33",
-  "date": "2024-Jul-29"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
