--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jul-29",
+  "seed": 1278221254,
   "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 203504321
+  "date": "2024-Jul-29"
 }
