--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 527042426,
-  "date": "2024-Jul-29"
+  "seed": 1626935878,
+  "date": "2024-Jul-29",
+  "rate": "5.33"
 }
