--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jul-30",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 1487956341,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Jul-30",
+  "seed": 587807767
 }
