--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1202048314,
-  "rate": "5.33",
-  "date": "2024-Jul-30",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1772150475,
+  "date": "2024-Jul-31",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33"
 }
