--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33",
   "date": "2024-Jul-31",
-  "seed": 1296451679,
-  "rate": "5.33"
+  "seed": 390495998
 }
