--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 484640689,
-  "date": "2024-Aug-5",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "rate": "5.33",
+  "date": "2024-Aug-5",
+  "seed": 1472096702
 }
