--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Aug-5",
+  "seed": 1813838576,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 287797741,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Aug-5"
 }
