--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "seed": 1360404491,
-  "date": "2024-Aug-6"
+  "date": "2024-Aug-6",
+  "seed": 923433541,
+  "rate": "5.33"
 }
