--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1025519848,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-6",
-  "seed": 923433541,
-  "rate": "5.33"
+  "rate": "5.33",
+  "date": "2024-Aug-6"
 }
