--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
   "date": "2024-Aug-7",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1792571207
+  "rate": "5.33",
+  "seed": 1642392260,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
