--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Aug-7",
   "rate": "5.33",
-  "seed": 1742811282
+  "seed": 1037147849,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
