--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "date": "2024-Aug-7",
-  "seed": 1074816381
+  "date": "2024-Aug-8",
+  "seed": 437218005,
+  "rate": "5.33"
 }
