--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1889892165,
-  "date": "2024-Aug-8"
+  "rate": "5.33",
+  "date": "2024-Aug-8",
+  "seed": 1928709756
 }
