--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1167428018,
+  "date": "2024-Aug-9",
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-9"
+  "seed": 829363165,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
