--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "seed": 1614807897,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-13"
+  "seed": 1248552000,
+  "date": "2024-Aug-13",
+  "rate": "5.33"
 }
