--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Aug-13",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1510835557,
-  "rate": "5.33"
+  "seed": 618504156,
+  "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
