--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1227096535,
+  "seed": 441363789,
+  "rate": "5.33",
   "date": "2024-Aug-13",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
