--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1277842805,
   "rate": "5.33",
-  "date": "2024-Aug-13",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 928061130,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Aug-13"
 }
