--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Aug-13",
+  "rate": "5.33",
+  "seed": 872513691,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1313599913,
-  "rate": "5.33"
+  "date": "2024-Aug-13"
 }
