--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 760518804,
-  "date": "2024-Aug-15"
+  "date": "2024-Aug-15",
+  "seed": 216929474,
+  "rate": "5.33"
 }
