--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Aug-16",
-  "rate": "5.33",
+  "seed": 1514611042,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1513948183
+  "date": "2024-Aug-16",
+  "rate": "5.33"
 }
