--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "date": "2024-Aug-19",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 976508415
+  "rate": "5.33",
+  "seed": 1046183707,
+  "date": "2024-Aug-19"
 }
