--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1345694277,
+  "seed": 1356876199,
+  "date": "2024-Aug-19",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "date": "2024-Aug-19"
+  "rate": "5.33"
 }
