--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 686629967,
-  "rate": "5.33",
-  "date": "2024-Aug-19"
+  "date": "2024-Aug-19",
+  "seed": 1976331979,
+  "rate": "5.33"
 }
