--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Aug-19",
+  "seed": 1217836417,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2104715488,
-  "rate": "5.33"
+  "rate": "5.33",
+  "date": "2024-Aug-19"
 }
