--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1217836417,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 432338729,
   "rate": "5.33",
-  "date": "2024-Aug-19"
+  "date": "2024-Aug-19",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
