--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 366305860,
-  "rate": "5.33",
+  "date": "2024-Aug-20",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-20"
+  "seed": 1441885192,
+  "rate": "5.33"
 }
